validator_derive/tests/compile-fail/must_match/field_doesnt_exist.stderr
error: proc-macro derive panicked
 --> $DIR/field_doesnt_exist.rs:3:10
  |
3 | #[derive(Validate)]
  |          ^^^^^^^^
  |
  = help: message: Invalid argument for `must_match` validator of field `password`: the other field doesn't exist in struct
